--- a/104021219_cli/104021219_cli.vcxproj.filters
+++ b/104021219_cli/104021219_cli.vcxproj.filters
@@ -14,4 +14,9 @@
       <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="104021219_cli.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
